--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
 
     <div id="container" class="text-white">
         <!-- Header -->
-        <header class="sticky top-0 z-50 bg-sky-400/10 backdrop-blur-sm shadow-lg border-b-2 border-sky-300 transition-all duration-300">
+        <header
+            class="sticky top-0 z-50 bg-sky-400/10 backdrop-blur-sm shadow-lg border-b-2 border-sky-300 transition-all duration-300">
             <nav id="navbar" class="p-5">
                 <div class="flex justify-between items-center">
                     <a href="#container">
@@ -350,7 +351,7 @@
                     <!-- Contenido -->
                     <div class="w-full md:w-2/3 flex flex-col gap-6 text-center md:text-left order-2 md:order-2">
                         <div>
-                            <p class="text-sky-300 text-lg md:text-xl font-semibold mb-2">Hola, soy</p>
+                            <p class="text-sky-300 text-lg md:text-xl font-semibold">Hola, soy</p>
                             <h1 id="nombreHero"
                                 class="loader text-4xl md:text-5xl lg:text-6xl font-bold mb-4 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
                                 <span>José Juan Dos Reis</span>
@@ -412,7 +413,8 @@
                         class="text-3xl md:text-4xl font-bold mb-4 mt-7 bg-gradient-to-r from-white to-sky-300 bg-clip-text text-transparent">
                         Proyectos Destacados
                     </h2>
-                    <p class="text-gray-400 text-lg">Descubre cómo aplico mis habilidades para construir soluciones web funcionales.</p>
+                    <p class="text-gray-400 text-lg">Descubre cómo aplico mis habilidades para construir soluciones web
+                        funcionales.</p>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
@@ -460,6 +462,42 @@
                     <div
                         class="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-sky-500 transition-all duration-300 hover:shadow-xl hover:shadow-sky-500/20 hover:-translate-y-2">
                         <div class="relative overflow-hidden aspect-video">
+                            <img src="./assets/img/Captura de pantalla 2025-10-30 201103.png" alt="Proyecto 2"
+                                class=" object-cover group-hover:scale-110 transition-transform duration-500">
+                            <div
+                                class="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent opacity-60">
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-white mb-3">Task app</h3>
+                            <p class="text-gray-400 mb-4 line-clamp-3">
+                                Aplicación web que permite gestionar tareas y recordatorios de forma eficiente, 
+                                con la capacidad de sincronizar los datos en tiempo real con Firebase.
+                            </p>
+                            <div class="flex gap-2 mb-4 flex-wrap">
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">React</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">Firebase</span>
+                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">CSS3</span>
+                            </div>
+                            <div class="flex gap-3">
+                                <a href="#" target="_blank"
+                                    class="flex-1 px-4 py-2 bg-gray-500 hover:bg-gray-600 text-white rounded-lg text-center font-medium transition-colors">
+                                    Proyecto en curso...
+                                </a>
+                                <a href="https://github.com/CrankyJJ/gestor-de-tareas" target="_blank"
+                                    class="px-4 py-2 bg-gray-700 hover:bg-gray-600 text-white rounded-lg transition-colors">
+                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                                        <path
+                                            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Proyecto 3 -->
+                    <div
+                        class="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-sky-500 transition-all duration-300 hover:shadow-xl hover:shadow-sky-500/20 hover:-translate-y-2">
+                        <div class="relative overflow-hidden aspect-video">
                             <img src="./assets/img/Work-In-Progress.png" alt="Proyecto 2"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div
@@ -493,41 +531,6 @@
                         </div>
                     </div>
 
-                    <!-- Proyecto 3 -->
-                    <div
-                        class="group bg-gray-800/50 backdrop-blur-sm rounded-xl overflow-hidden border border-gray-700 hover:border-sky-500 transition-all duration-300 hover:shadow-xl hover:shadow-sky-500/20 hover:-translate-y-2">
-                        <div class="relative overflow-hidden aspect-video">
-                            <img src="./assets/img/Work-In-Progress.png" alt="Proyecto 3"
-                                class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-                            <div
-                                class="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent opacity-60">
-                            </div>
-                        </div>
-                        <div class="p-6">
-                            <h3 class="text-xl font-bold text-white mb-3">Task app</h3>
-                            <p class="text-gray-400 mb-4 line-clamp-3">
-                                Descripción breve del proyecto 3. Aquí puedes explicar las tecnologías utilizadas y el
-                                propósito del proyecto.
-                            </p>
-                            <div class="flex gap-2 mb-4 flex-wrap">
-                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">Java</span>
-                                <span class="px-3 py-1 bg-sky-500/20 text-sky-300 rounded-full text-sm">MySQL</span>
-                            </div>
-                            <div class="flex gap-3">
-                                <a href="#"
-                                    class="flex-1 px-4 py-2 bg-gray-500 hover:bg-gray-600 text-white rounded-lg text-center font-medium transition-colors">
-                                    Proyecto en curso...
-                                </a>
-                                <a href="#"
-                                    class="px-4 py-2 bg-gray-700 hover:bg-gray-600 text-white rounded-lg transition-colors">
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                                        <path
-                                            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                                    </svg>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
             </div>
